# tutor-contrib-typesense

./: MANIFEST.in  Makefile  README.rst  mise.toml  pyproject.toml
.github/workflows/: test.yml
tutor_typesense/: plugin.py
tutor_typesense/patches/: caddyfile  k8s-deployments  k8s-jobs  k8s-services  k8s-volumes  local-docker-compose-caddy-aliases  local-docker-compose-cms-dependencies  local-docker-compose-dev-services  local-docker-compose-jobs-services  local-docker-compose-services  openedx-auth  openedx-cms-production-settings  openedx-common-settings  openedx-development-settings  openedx-lms-development-settings  openedx-lms-production-settings
tutor_typesense/templates/typesense/tasks/typesense/: init.sh
