[project]
name = "tutor-typesense"
dynamic = ["version"]
description = "A Tutor plugin for search using Typesense"
readme = "README.rst"
license = { file = "LICENSE.txt" }
requires-python = ">=3.11"
authors = [
]
maintainers = [
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "tutor>=20.0.0,<21.0.0",  # teak
]

[project.optional-dependencies]
dev = [
    "tutor[dev]>=20.0.0,<21.0.0",  # teak
    "black",
    "isort",
    "pylint",
]

[project.entry-points."tutor.plugin.v1"]
typesense = "tutor_typesense.plugin"

[project.urls]
Code = "https://github.com/open-craft/tutor-contrib-typesense"
Community = "https://discuss.openedx.org"
Documentation = "https://docs.tutor.edly.io/"
Homepage = "https://docs.tutor.edly.io/"
"Issue tracker" = "https://github.com/open-craft/tutor-contrib-typesense/issues"

[tool.setuptools.dynamic]
version = {attr = "tutor_typesense.__about__.__version__"}

[tool.isort]
profile = "black"
src_paths = ["tutor_typesense"]
extend_skip = ["templates"]

[tool.black]
exclude = "templates"
